--- a/Plugins/Grand.Plugin.Payments.Paytm/Grand.Plugin.Payments.Paytm.csproj
+++ b/Plugins/Grand.Plugin.Payments.Paytm/Grand.Plugin.Payments.Paytm.csproj
@@ -33,9 +33,7 @@
     <ProjectReference Include="..\..\Grand.Framework\Grand.Framework.csproj">
       <Private>false</Private>
     </ProjectReference>
-    <ProjectReference Include="..\..\Grand.Services\Grand.Services.csproj">
-      <Private>false</Private>
-    </ProjectReference>
+    <ProjectReference Include="..\..\Grand.Services\Grand.Services.csproj" />
   </ItemGroup>
 
   <ItemGroup>
